<resources>
    <string name="app_name">Cosmo-Fox</string>
    <string name="both_foxes">ImageView - Two Foxes</string>
    <string name="text1">Cosmo-Fox</string>
    <string name="Sign_In">Sign In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="Sign_In_Inactive">Sign In</string>
    <string name="Sign_Up_Inactive">Sign Up</string>
    <string name="Sign_In_Text">Already have an account?</string>
    <string name="Sign_Up_Text">Do you need an account?</string>


    <string name="Sign_Out">Sign Out</string>


    <string name="Phone_Number">5615020135</string>
    <string name="Password">1234567890!</string>


    <string name="Hint_Password">Password</string>
    <string name="Hint_Phone_Number">Phone Number</string>
    <string name="Hint_Name">Name</string>
    <string name="Hint_Email">Email</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Default Database</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_blank">blank</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_music__menu">Music Menu</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

</resources>
