<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"

    tools:context="learing01.android.mh.learningandroidapps.SignIn">

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">

        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/Hint_Phone_Number"
            android:inputType="phone"
            android:text="@string/Phone_Number"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="36sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />

        <com.rengwuxian.materialedittext.MaterialAutoCompleteTextView
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"
            android:text="@string/Password"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/black"
            android:textSize="36sp"
            app:met_baseColor="@android:color/black"
            app:met_floatingLabel="highlight"
            app:met_maxCharacters="12"
            app:met_primaryColor="@android:color/black"
            app:met_singleLineEllipsis="true" />


    </LinearLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/my_button"
        android:fontFamily="serif"
        android:text="@string/Sign_In"
        android:textAllCaps="false"
        android:textColor="@color/text_color2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />

</RelativeLayout>