<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"

    tools:context=".MainActivity">


    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="55dp"
        android:fontFamily="cursive"
        android:text="@string/text1"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/text_color"
        android:textSize="36sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/both_foxes"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:contentDescription="@string/both_foxes"
            android:src="@drawable/both" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="34dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:fontFamily="serif"
            android:text="@string/Sign_Up"

            android:textAllCaps="false"
            android:textColor="@color/text_color2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <Button
            android:id="@+id/sign_in_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/my_button"
            android:fontFamily="serif"
            android:text="@string/Sign_In"
            android:textAllCaps="false"
            android:textColor="@color/text_color2"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />
    </LinearLayout>


</RelativeLayout>